--- a/ResturantManage/app/src/main/res/values/strings.xml
+++ b/ResturantManage/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="txt_table_number">Table Number</string>
     <string name="total_order_20_vat">Total Order (20% VAT)</string>
     <string name="comfirm_order">Comfirm Order</string>
+    <string name="share">Share</string>
 </resources>
